# LaboratorioDeProgramacao

ExAula05/: CMakeLists.txt  main.cpp
ExAula06/: CMakeLists.txt  main.cpp
ExAula2/: CMakeLists.txt  main.cpp
ExAula3/: CMakeLists.txt  main.cpp
ExAula4/: CMakeLists.txt  main.cpp
ExAula7/: CMakeLists.txt  main.cpp
ExAula8/: CMakeLists.txt  main.cpp
Trabalho01/: CMakeLists.txt  QuickSortBfprt.cpp  QuickSortBfprt.h  QuickSortChoosingPivot.cpp  QuickSortChoosingPivot.h  QuickSortIndex.cpp  QuickSortIndex.h  QuickSortMemory.cpp  QuickSortMemory.h  QuickSortPointer.cpp  QuickSortPointer.h  QuickSortRandomPivot.cpp  QuickSortRandomPivot.h  instancias_ruins_Quicksort.hpp  main.cpp
Trabalho02/: main.cpp
Trabalho03/: CMakeLists.txt  Heap.cpp  Heap.h  filename.huf  main.cpp
Trabalho04/: AvlTree.cpp  CMakeLists.txt  avl.cpp  avl.hpp  main.cpp
avl-tree/: main.cpp
huffman/: Heap.cpp  Heap.h  filename.huf  filename.huf1
knuth-morris-pratt/: CMakeLists.txt  main.cpp
quicksort/: CMakeLists.txt  QuickSortBfprt.cpp  QuickSortBfprt.h  QuickSortIndex.cpp  QuickSortPointer.h  QuickSortRandomPivot.h
