cmake_minimum_required(VERSION 3.13)
project(Trabalho01)

set(CMAKE_CXX_STANDARD 14)

add_executable(Trabalho01 main.cpp QuickSortIndex.cpp QuickSortIndex.h QuickSortPointer.cpp QuickSortPointer.h QuickSortRandomPivot.cpp QuickSortRandomPivot.h QuickSortBfprt.cpp QuickSortBfprt.h QuickSortMemory.cpp QuickSortMemory.h)